src/objects/Where_Used__c.object
<CustomObject>
    <fields>
        <fullName>Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Percent</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>BOM</relationshipLabel>
        <relationshipName>BOM_Percents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>R#</label>
        <referenceTo>RawMaterial__c</referenceTo>
        <relationshipName>BOM_Percents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R_Description__c</fullName>
        <formula>RNumber__r.R_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R-Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BOM</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Product__c</columns>
        <columns>RNumber__c</columns>
        <columns>Percent__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BP-{000000000}</displayFormat>
        <label>RM Percent Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOM</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SingleBOMTotalPercent</fullName>
        <active>true</active>
        <description>Single BOM Total Percent must be 100%</description>
        <errorConditionFormula>Percent__c &gt;1</errorConditionFormula>
        <errorMessage>Total for a single BOM is more than 100%</errorMessage>
    </validationRules>
</CustomObject>